--- a/src/App.css
+++ b/src/App.css
@@ -50,6 +50,12 @@ span {
   color:#7a5de8;
 }
 
+.btn-send {
+  background-color:#3f51b5;
+  color:white;
+
+}
+
 .btn-danger {
   background-color:red;
 }
@@ -196,6 +202,10 @@ a {
 
 .bg_black{
   background-color:#151151;
+}
+
+.bg_primary{
+  background-color:#3f51b5;
 }
 
 .flex{
